--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='my-3'>J. de Lucas, X. Rivas and T. Sobczak, <br>"<em>k</em>-contact Lie systems: theory and applications".<br>
+					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.17734" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.17734</span></a></li>
+
 					<li class='my-3'>X. Gràcia, A. Martínez-Muñoz, X. Rivas and N. Román-Roy, <br>"The evolution operator connecting the Lagrangian and Hamiltonian formalisms for contact systems".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.13401" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.13401</span></a></li>
 
