--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="row">
 				<h2 class="blue">&#9632; Research</h2>
 
-				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I collaborate with many groups in the <a href="http://gmcnet.webs.ull.es/">Geometry, Mechanics and Control Network</a>.</p>
+				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I collaborate with many groups in the <a href="http://gmcnet.webs.ull.es/">Geometry, Dynamics and Field Theory Network</a>.</p>
 
 				<p>My PhD advisors were Professors <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf" target="_blank">here</a>.</p>
 
