--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='my-3'>X. Gràcia, A. Martínez-Muñoz, X. Rivas and N. Román-Roy,<br>"Pairs of differential forms: a framework for precontact geometry".<br>
+					<em>Preprint.</em> <a href="https://arxiv.org/abs/2602.04882" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2602.04882</span></a></li>
+
 					<li class='my-3'>X. Gràcia, X. Rivas and D. Torres,<br>"Time-dependent metrics and connections".<br>
 					<em>to appear in Geom. Mech.</em> <a href="https://arxiv.org/abs/2601.14064" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2601.14064</span></a></li>
 
