--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2505.05462" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.05462</span></a></li>
 					
 					<li class='my-3'>X. Rivas, N. Román-Roy and B. M. Zawora,<br>"Symmetries and Noether's theorem for action-dependent multicontact field theories".<br>
-					<em>Lett. Math. Phys.</em> <strong>115</strong>(108):1-32, 2025. <a href="https://arxiv.org/abs/2503.03463" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2503.03463</span></a> <a href="https://doi.org/10.1002/prop.70000" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s11005-025-01995-0</span></a> <a href="./papers/22_Symmetries Multicontact.pdf" target="_blank"><i class="bi bi-file-earmark-pdf-fill" style="color:red; font-size: 1.2rem;"></i></a></li>
+					<em>Lett. Math. Phys.</em> <strong>115</strong>(108):1-32, 2025. <a href="https://arxiv.org/abs/2503.03463" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2503.03463</span></a> <a href="https://doi.org/10.1007/s11005-025-01995-0" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s11005-025-01995-0</span></a> <a href="./papers/22_Symmetries Multicontact.pdf" target="_blank"><i class="bi bi-file-earmark-pdf-fill" style="color:red; font-size: 1.2rem;"></i></a></li>
 
 					<li class='my-3'>J. de Lucas, X. Rivas and T. Sobczak,<br>"Foundations on <em>k</em>-contact geometry".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2409.11001" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.11001</span></a></li>
