--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<em>to appear in Geom. Mech.</em> <a href="https://arxiv.org/abs/2601.14064" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2601.14064</span></a></li>
 
 					<li class='my-3'>J. de Lucas, X. Rivas and T. Sobczak,<br>"<em>k</em>-contact Lie systems: theory and applications".<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.17734" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.17734</span></a></li>
+					<em>Geom. Mech.</em> <a href="https://arxiv.org/abs/2511.17734" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.17734</span></a> <a href="https://doi.org/10.1142/S2972458926400022" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1142/S2972458926400022</span></a> </li>
 
 					<li class='my-3'>X. Gràcia, A. Martínez-Muñoz, X. Rivas and N. Román-Roy,<br>"The evolution operator connecting the Lagrangian and Hamiltonian formalisms for contact systems".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.13401" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.13401</span></a></li>
@@ -102,7 +102,7 @@
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.01499" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.01499</span></a></li>
 
 					<li class='my-3'>J. Gaset, X. Rivas and N. Román-Roy,<br>"A survey on geometric frameworks for action-dependent classical field theories and their relationship".<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2506.11646" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2506.11646</span></a></li>
+					<em>Geom. Mech.</em> <a href="https://arxiv.org/abs/2506.11646" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2506.11646</span></a> <a href="https://doi.org/10.1142/S2972458926400010" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1142/S2972458926400010</span></a> </li>
 
 					<li class='my-3'>M. de León, R. Izquierdo-López and X. Rivas,<br>"Brackets in multicontact geometry and multisymplectization".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2505.13224" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.13224</span></a></li>
